fixed bug where content is cut off

--- a/themes/picture/picture.css
+++ b/themes/picture/picture.css
@@ -19,9 +19,10 @@ body{
 }
 
 .page-content.inset{
-    overflow: scroll !important;
-    height: 100vh !important;
-    position: relative !important;
+  overflow: scroll !important;
+  height: 100vh !important;
+  position: relative !important;
+  padding-bottom: 150px;
 }
 
 #nsbadgenew {
